WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267164
[iOS] -setSelectedTextRange: crashes with a nil range when async text input is enabled
https://bugs.webkit.org/show_bug.cgi?id=267164
Summary
[iOS] -setSelectedTextRange: crashes with a nil range when async text input i...
Wenson Hsieh
Reported
2024-01-05 17:59:48 PST
rdar://120553527
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-01-05 18:07:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22457
EWS
Comment 2
2024-01-05 19:07:09 PST
Committed
272722@main
(db2541f70407): <
https://commits.webkit.org/272722@main
> Reviewed commits have been landed. Closing PR #22457 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug