Cherry-pick db2541f70407. rdar://120553527

[iOS] -setSelectedTextRange: crashes with a nil range when async text input is enabled
    https://bugs.webkit.org/show_bug.cgi?id=267164
    rdar://120553527

    Reviewed by Aditya Keerthi.

    Ensure that we don't hit legacy UIKit method assertions from within our own code, when async text
    input is enabled, by moving the logic in `clearSelection` into `_internalClearSelection`, limiting
    the assertion to `clearSelection`, and then using `_internalClearSelection` instead of the former.

    Test: KeyboardInputTests.ClearSelectedTextRange

    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView clearSelection]):
    (-[WKContentView _internalClearSelection]):
    (-[WKContentView setSelectedTextRange:]):
    * Tools/TestWebKitAPI/Tests/ios/KeyboardInputTestsIOS.mm:

    Canonical link: https://commits.webkit.org/272722@main

Identifier: 270272.2240@safari-7618-branch